# discord_apple_music_rpc

./: .gitignore  Cargo.toml  README.md  setup.sh
src/: app.rs  config.rs  discord_rpc.rs  error.rs  lib.rs  logging.rs  main.rs  models.rs  osascript.rs  setup.rs  utils.rs
src/app/: cli.rs  controller.rs  mod.rs  runner.rs  setup.rs
src/config/: settings.rs
src/core/: constants.rs  error.rs  logging.rs  mod.rs  models.rs  utils.rs
src/integrations/: apple_music.rs  discord.rs  itunes_api.rs  mod.rs
src/ipc/: commands.rs  server.rs
