[package]
name = "discord_apple_music_rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
discord-rich-presence = "0.2.3"
sysinfo = "0.30.5"
osascript = "0.3.0"
serde = { version = "1.0.196", features = ["derive"] }
percent-encoding = "2.3.1"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
dotenv = "0.15.0"
surf = "2.3.2"
http-cache-surf = { version = "0.12.1", features = ["manager-moka"] }
fern = "0.6.2"
log = "0.4.20"
humantime = "2.1.0"
