[package]
name = "pipeboom"
version = "3.0.0"
edition = "2024"

[dependencies]
osascript = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
percent-encoding = "2.3"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
surf = "2.3"
http-cache-surf = { version = "0.14", features = ["manager-moka"] }
fern = "0.7"
log = "0.4"
humantime = "2.2"
discord-rich-presence = { git = "https://github.com/vionya/discord-rich-presence" }
tokio-stream = { version = "0.1", features = ["full"] }
